Changing Topic ids in index.html

--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
 					<a id="Home" class="navtab-heading">Home</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Investing" class="navtab-heading">Coding</a>
+					<a id="Coding" class="navtab-heading">Coding</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Life" class="navtab-heading">Language</a>
+					<a id="Art" class="navtab-heading">Art</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Skiing" class="navtab-heading">Investing</a>
+					<a id="Investing" class="navtab-heading">Investing</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Art" class="navtab-heading">Social</a>
+					<a id="Food" class="navtab-heading">Food</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Food" class="navtab-heading">Art</a>
+					<a id="Social" class="navtab-heading">Social</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Writing" class="navtab-heading">Food</a>
+					<a id="Language" class="navtab-heading">Language</a>
 				</li>
 				<li class="navtab-item">
-					<a id="Tennis" class="navtab-heading">Life</a>
+					<a id="Life" class="navtab-heading">Life</a>
 				</li>
 				<li class="navtab-item">
 					<a id="Other" class="navtab-heading">Other</a>
